@@ -5,7 +5,6 @@ import java.text.DecimalFormat;
 import java.util.Arrays;
 import java.util.List;
 
-
 public class AccountDao {
     private final DatabaseManager dbManager;
 
@@ -21,24 +20,20 @@ public class AccountDao {
     public void updateSavings(String accountNumber, int productIndex, String amount, String startDate) throws IOException {
         List<String> lines = dbManager.readAccountFile(accountNumber);
         String productLine = amount + "\t" + startDate;
-        lines.set(productIndex + 1, productLine); // 예금 금액은 인덱스 0, 적금 상품은 인덱스 1부터 시작
+        lines.set(productIndex + 1, productLine);
         dbManager.writeAccountFile(accountNumber, lines);
     }
-    
+
     public long getBalance(String accountNumber) throws IOException {
         List<String> lines = dbManager.readAccountFile(accountNumber);
-        // Assuming the balance is stored as the first line in the account file
         String balanceStr = lines.get(0);
-
         return Long.parseLong(balanceStr);
     }
-    
+
     public String getBalanceToString(String accountNumber) throws IOException {
         List<String> lines = dbManager.readAccountFile(accountNumber);
-        // Assuming the balance is stored as the first line in the account file
         String balanceStr = lines.get(0);
         DecimalFormat decimalFormat = new DecimalFormat("###,###");
-
         return decimalFormat.format(Long.parseLong(balanceStr));
     }
 
@@ -49,7 +44,6 @@ public class AccountDao {
         String str = subList.get(index);
         if (!str.isEmpty()) {
             String[] parts = str.split("\t");
-
             return parts[1];
         }
         return accountNumber;
@@ -57,99 +51,158 @@ public class AccountDao {
 
     public String getCarryBack(String accountNumber) throws IOException {
         List<String> lines = dbManager.readAccountFile(accountNumber);
-
         String carryBackStr = lines.get(1);
-        if(!carryBackStr.isEmpty()) {
+        if (!carryBackStr.isEmpty()) {
             String[] parts = carryBackStr.split("\t");
             DecimalFormat decimalFormat = new DecimalFormat("###,###");
-
             String input = parts[0];
-            Long carryBack = (Long) Math.round(Double.parseDouble(input) + Double.parseDouble(input)*0.03);
-
+            Long carryBack = (Long) Math.round(Double.parseDouble(input) + Double.parseDouble(input) * 0.03);
             return decimalFormat.format(carryBack);
         }
         return accountNumber;
     }
 
-
-    public void updateBalance(String accountNumber, long newBalance) throws IOException {
-        List<String> lines = dbManager.readAccountFile(accountNumber);
-        // Update balance in the first line
-        lines.set(0, String.valueOf(newBalance));
-        dbManager.writeAccountFile(accountNumber, lines);
-    }
-
-    // TODO: 모든 입출금 로직을 하나의 method 로 통합
-    // TODO: 모든 입출금 로직에 대해 입출금 내역 로그 추가
-    public int executeTransaction(String accountNumber, long money, String type) throws IOException {
+    public int executeTransaction(String accountNumber, long money, String type, String date) throws IOException {
         List<String> lines = dbManager.readAccountFile(accountNumber);
         long oldBalance = Long.parseLong(lines.get(0));
-        switch (type){
+        DecimalFormat decimalFormat = new DecimalFormat("₩ #,###");
+        String formattedDate = parseDate(date);
+
+        boolean dateExists = false;
+        StringBuilder transactionLog = new StringBuilder();
+
+        for (int i = 5; i < lines.size(); i++) {
+            if (lines.get(i).startsWith(formattedDate)) {
+                dateExists = true;
+                break;
+            }
+        }
+
+        if (!dateExists) {
+            transactionLog.append(formattedDate).append("\n");
+        }
+        switch (type) {
             case "deposit": // 입금
                 try {
-                    money = Math.addExact(money, oldBalance);
+                    oldBalance = Math.addExact(money, oldBalance);
                 } catch (ArithmeticException e) {
                     return -1; // 입금 long 형 범위 초과
                 }
-                lines.set(0, Long.toString(money));
-                dbManager.writeAccountFile(accountNumber, lines);
-                return 0;
+                transactionLog.append("입금:\t+ ").append(decimalFormat.format(money)).append("\t").append(decimalFormat.format(oldBalance));
+                break;
 
             case "withdrawal": // 출금
                 if (oldBalance - money < 0) {
                     return -1; // 잔고보다 더 많은 돈을 출금할 때
                 }
-                money = oldBalance - money;
-                lines.set(0, Long.toString(money));
-                dbManager.writeAccountFile(accountNumber, lines);
-                return 0;
+                oldBalance -= money;
+                transactionLog.append("출금:\t- ").append(decimalFormat.format(money)).append("\t").append(decimalFormat.format(oldBalance));
+                break;
 
             case "savings": // 적금
                 if (oldBalance - money < 0) {
                     return -1; // 적금 금액보다 더 많은 돈을 출금할 때
                 }
-                money = oldBalance - money;
-                lines.set(0, Long.toString(money));
-                dbManager.writeAccountFile(accountNumber, lines);
-                return 0;
+                oldBalance -= money;
+                transactionLog.append("적금:\t- ").append(decimalFormat.format(money)).append("\t").append(decimalFormat.format(oldBalance));
+                break;
+
+            case "canceled": // 적금 해지
+                try {
+                    oldBalance = Math.addExact(money, oldBalance);
+                } catch (ArithmeticException e) {
+                    return -1; // 입금 long 형 범위 초과
+                }
+                transactionLog.append("적금 해지:\t+ ").append(decimalFormat.format(money)).append("\t").append(decimalFormat.format(oldBalance));
+                break;
 
             default:
-                return -2; // 비정상적인 요청 타입
+                return -2; // 비정상 요청 타입
         }
+        lines.set(0, String.valueOf(oldBalance));
+        lines.add(transactionLog.toString());
+        dbManager.writeAccountFile(accountNumber, lines);
+
+        return 0;
     }
 
-    public String showSavings (String accountNumber) throws IOException{
+    public void executeTransferTransaction(String accountNumber, long money, String counterpartyName, String type, String date) throws IOException {
+        List<String> lines = dbManager.readAccountFile(accountNumber);
+        long oldBalance = Long.parseLong(lines.get(0));
+        DecimalFormat decimalFormat = new DecimalFormat("₩ #,###");
+        String formattedDate = parseDate(date);
+
+        boolean dateExists = false;
+        StringBuilder transactionLog = new StringBuilder();
+
+        for (int i = 5; i < lines.size(); i++) {
+            if (lines.get(i).startsWith(formattedDate)) {
+                dateExists = true;
+                break;
+            }
+        }
+
+        if (!dateExists) {
+            transactionLog.append(formattedDate).append("\n");
+        }
+
+        switch (type) {
+            case "sender": // 송금 - 보내는 사람
+                if (oldBalance + money < 0) {
+                    return; // 송금 금액이 잔액보다 많음
+                }
+                oldBalance += money;
+                transactionLog.append(counterpartyName).append(":\t- ").append(decimalFormat.format(-money)).append("\t").append(decimalFormat.format(oldBalance));
+                break;
+
+            case "receiver": // 송금 - 받는 사람
+                oldBalance += money;
+                transactionLog.append(counterpartyName).append(":\t+ ").append(decimalFormat.format(money)).append("\t").append(decimalFormat.format(oldBalance));
+                break;
+
+            default:
+                return; // 비정상 요청 타입
+        }
+
+        lines.set(0, String.valueOf(oldBalance));
+
+        if (!transactionLog.toString().isEmpty()) {
+            lines.add(transactionLog.toString());
+        }
+
+        dbManager.writeAccountFile(accountNumber, lines);
+    }
+
+    public String showSavings(String accountNumber) throws IOException {
         List<String> lines = dbManager.readAccountFile(accountNumber);
         DecimalFormat decimalFormat = new DecimalFormat("###,###");
-        return decimalFormat.format(Long.parseLong(lines.get(0)));
+        return decimalFormat.format(Long.parseLong(lines.getFirst()));
     }
 
-    public boolean hasSavings (String accountNumber, int index) throws IOException{
-        System.out.println();
+    public boolean hasSavings(String accountNumber, int index) throws IOException {
         List<String> lines = dbManager.readAccountFile(accountNumber);
         return !lines.get(index).trim().isEmpty();
     }
 
-    public void removeSavings (String accountNumber, int productNum) throws IOException{
+    public void removeSavings(String accountNumber, int productNum) throws IOException {
         List<String> lines = dbManager.readAccountFile(accountNumber);
         lines.set(productNum, "");
-        dbManager.writeAccountFile(accountNumber,lines);
+        dbManager.writeAccountFile(accountNumber, lines);
     }
 
-    public long getSavings (String accountNumber, int index) throws  IOException{
+    public long getSavings(String accountNumber, int index) throws IOException {
         List<String> lines = dbManager.readAccountFile(accountNumber);
         return Long.parseLong(lines.get(index));
     }
 
-    //추가
     public String getSavingsAmount(String accountNumber, int productIndex) throws IOException {
         List<String> lines = dbManager.readAccountFile(accountNumber);
-        String productLine = lines.get(productIndex + 1); // 인덱스 1부터 적금 상품 정보 시작
+        String productLine = lines.get(productIndex + 1);
         String[] productInfo = productLine.split("\t");
         return productInfo.length > 0 ? productInfo[0] : "0";
     }
 
-    public void addSavings (String accountNumber, long money, int productIndex) throws IOException {
+    public void addSavings(String accountNumber, long money, int productIndex) throws IOException {
         List<String> lines = dbManager.readAccountFile(accountNumber);
         String line = lines.get(productIndex);
         String[] parts = line.split("\t");
@@ -157,8 +210,14 @@ public class AccountDao {
         long oldSavings = Long.parseLong(parts[0]);
         long newSavings = oldSavings + money;
 
-        lines.set(productIndex, newSavings + "\t" + startDate); // 잔액 index = 0
+        lines.set(productIndex, newSavings + "\t" + startDate);
         dbManager.writeAccountFile(accountNumber, lines);
+    }
+
+    private String parseDate(String rawDate) {
+        int month = Integer.parseInt(rawDate.substring(4, 6));
+        int day = Integer.parseInt(rawDate.substring(6, 8));
+        return month + "월 " + day + "일";
     }
 
     public String getAmount(String accountNumber, int index) throws IOException {
@@ -168,7 +227,6 @@ public class AccountDao {
         String str = subList.get(index);
         if (!str.isEmpty()) {
             String[] parts = str.split("\t");
-
             return parts[0];
         }
         return null;
